templates/k8s/traefik/app/app.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      nodeSelector:
        manage-daemon: ""
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --api.insecure
            - --accesslog
            - --log.level=TRACE
            - --entryPoints.local.Address=:9000
            - --entryPoints.web.Address=:80
            - --entryPoints.websecure.Address=:443
            - --providers.kubernetescrd
            - --serverstransport.insecureskipverify=true
            - --certificatesresolvers.myresolver.acme.email=${ADMIN_EMAIL}
            - --certificatesresolvers.myresolver.acme.storage=/etc/traefik/acme.json
            - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
          volumeMounts:
            - mountPath: /etc/traefik
              name: config-dir
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: websecure
              containerPort: 443
              hostPort: 443
            - name: admin
              containerPort: 8080
            - name: local
              containerPort: 9000
              hostPort: 9000
      volumes: 
        - name: config-dir
          hostPath:
            path: ${TRAEFIK_CONFIG_PATH}/traefik/config/traefik/etc/traefik
